syntax = "proto3";

option go_package = "epistemic-me-core/pb/models";

import "proto/models/observation_context.proto";

// Base content and confidence messages
message Content {
    string raw_str = 1;
}

message ConfidenceRating {
    double confidence_score = 1;
    bool default = 2;
}

// Belief types
enum BeliefType {
    BELIEF_TYPE_INVALID = 0;
    STATEMENT = 1;
    FALSIFIABLE = 2;
    CAUSAL = 3;
}

// Types of epistemic emotions that emerge from discrepancies
enum EpistemicEmotion {
    EMOTION_INVALID = 0;
    CONFIRMATION = 1;
    SURPRISE = 2;
    CURIOSITY = 3;
    CONFUSION = 4;
}

// BeliefContext represents the relationship between a Belief and an ObservationContext
message BeliefContext {
    string belief_id = 1;
    string observation_context_id = 2;
    repeated ConfidenceRating confidence_ratings = 3;
    map<string, float> conditional_probabilities = 4;
    repeated string discrepancy_ids = 5;
    EpistemicEmotion epistemic_emotion = 6;
    float emotion_intensity = 7;
}

// The main Belief message
message Belief {
    string id = 1;
    string self_model_id = 2;
    int32 version = 3;
    BeliefType type = 4;
    repeated Content content = 5;
}

// BeliefSystem with conceptualization
message BeliefSystem {
    repeated Belief beliefs = 1;
    repeated ObservationContext observation_contexts = 2;
    repeated BeliefContext belief_contexts = 3;
    
    message Metrics {
        double clarification_score = 1;
        int32 total_beliefs = 2;
        int32 total_falsifiable_beliefs = 3;
        int32 total_causal_beliefs = 4;
        int32 total_belief_statements = 5;
    }
    Metrics metrics = 4;

    message Ontology {
        string raw_str = 1;
        int64 generated_at = 2;
        repeated BeliefContext contexts = 3;
    }
    Ontology ontology = 5;
}
